fixed the scrollbar
printabale section now does not display the scrollbars

--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -29,6 +29,8 @@ body {
     left: 0;
     top: 0;
     box-shadow: none;
+    overflow-x: hidden;
+    overflow-y: hidden;    
   }
 
   .ProseMirror {
