--- a/src/assets/RichEditor.scss
+++ b/src/assets/RichEditor.scss
@@ -126,7 +126,7 @@ nav {
 div.scroll {
   overflow-x: hidden;
   overflow-y: visible;
-  flex-grow: 1;
+  // flex-grow: 1;
 }
 
 div.statusBar {
